fixed news alert bar view on smaller screens

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -61,3 +61,36 @@
     left: 90%;
   }
 }
+
+@media (max-width: 1024px) {
+  .showcase-container {
+    margin-top: 12rem;
+    display: flex;
+  }
+  .showcase-container .main-texts {
+    width: 40rem;
+  }
+}
+
+@media (max-width: 783px) {
+  .showcase-container .main-texts {
+    width: 100%;
+    text-align: center;
+
+    p {
+      width: 35rem;
+      margin: 0 auto;
+    }
+  }
+
+  .cta-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .btc-animation {
+    position: absolute;
+    top: 110%;
+    left: 20%;
+  }
+}
