--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -61,3 +61,9 @@ body {
 .show {
   display: flex !important;
 }
+
+@media (max-width: 764px) {
+  .divider-margin {
+    margin-top: 43rem !important;
+  }
+}
